<resources>
    <string name="app_name">profilepresentation</string>

    <string name="error_message_no_network">No network connection</string>
    <string name="error_message_server_problems">Server problems</string>
    <string name="error_message_wrong_current_credential_key">Wrong current password</string>
    <string name="error_message_invalid_new_credential_key">Invalid new password</string>
    <string name="error_message_invalid_new_credential_token">Invalid new email</string>
    <string name="error_message_new_credential_token_collision">New email already exists</string>

    <string name="relations_following_you">Following you</string>
    <string name="relations_followers">Followers</string>
    <string name="relations_subscriptions">Subscriptions</string>

    <string name="action_follow">Follow</string>
    <string name="action_unfollow">Unfollow</string>
    <string name="action_edit">Edit</string>
    <string name="action_retry">Retry</string>
    <string name="action_change_initials">Change initials</string>
    <string name="action_change_description">Change description</string>
    <string name="action_change_email">Change email</string>
    <string name="action_change_password">Change password</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_cancel">Cancel</string>

    <string name="hint_personal_info">Personal info</string>
    <string name="hint_security_info">Security info</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_description">Description</string>
    <string name="hint_password">Password</string>
    <string name="hint_new_email">New email</string>
    <string name="hint_new_password">New password</string>
    <string name="hint_current_password">Current password</string>
    <string name="hint_search">Search</string>

    <string name="warning_empty_field">Empty field</string>

    <string name="template_initials">%1$s %2$s</string>
</resources>
